--- a/Code/SA_Java_Journals_site/src/views/journal-publications-view/journal-publications-view.html
+++ b/Code/SA_Java_Journals_site/src/views/journal-publications-view/journal-publications-view.html
@@ -1,5 +1,7 @@
 <h1>Publications
+	<!-- ko if: authModel.role() == 'PUBLISHER'  -->
 	<button type="submit" class="btn btn-success" data-bind="click: openNewJournalPublicationModal"><span class="glyphicon glyphicon-plus-sign"></span> New</button>
+	<!-- /ko  -->
 </h1>
 <h3>Journal: <span  data-bind="text: currentJournal().name"></span></h3>
 <form class="form-horizontal" data-bind="submit: doSearch">
@@ -33,8 +35,10 @@
 				<th>Publication Date</th>
 				<th>Description</th>
 				<th>Publisher</th>
+				<!-- ko if: authModel.role() == 'PUBLISHER'  -->
 				<th>Edit</th>
 				<th>Delete</th>
+				<!-- /ko -->
 			</tr>
 		</thead>
 		<tbody data-bind="foreach: journalPublications">
@@ -43,6 +47,7 @@
 				<td data-bind="text: publicationDate"></td>
 				<td data-bind="text: description"></td>
 				<td data-bind="text: publisherProfile.firstName + ' ' + publisherProfile.lastName"></td>
+				<!-- ko if: $parent.authModel.role() == 'PUBLISHER'  -->
 				<td>
 					<p data-placement="top" data-toggle="tooltip" title="Edit">
 						<button type="button" class="btn btn-primary btn-xs" data-title="Edit" data-bind="click: function(data) {$parent.openEditJournalPublicationModal(data);}">
@@ -57,6 +62,7 @@
 						</button>
 					</p>
 				</td>
+				<!-- /ko -->
 			</tr>
 		</tbody>
 	</table>
@@ -88,7 +94,7 @@
     </div>
 
 	<!-- delete modal -->
-	<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+	<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="delete" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
