--- a/Code/SA_Java_Journals_site/src/views/journals-view/journals-view.html
+++ b/Code/SA_Java_Journals_site/src/views/journals-view/journals-view.html
@@ -22,9 +22,51 @@
 	</fieldset>
 </form>
 <div class="row">
-	<!-- ko component: { name: 'journals-list', params: {journals: journals, authModel: authModel }} -->
-	<!-- /ko -->
-
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>#</th>
+				<th>Journal Name</th>
+				<th>Tag</th>
+				<th>About</th>
+				<th>Owner</th>
+				<th>Is Active</th>
+				<th>Publications</th>
+				<th>Edit</th>
+				<th>Delete</th>
+			</tr>
+		</thead>
+		<tbody data-bind="foreach: journals">
+			<tr>
+				<td data-bind="text: idJournal"></td>
+				<td data-bind="text: name"></td>
+				<td data-bind="text: tags"></td>
+				<td data-bind="text: about"></td>
+				<td data-bind="text: ownerProfile.firstName + ' ' + ownerProfile.lastName"></td>
+				<td data-bind="text: active"></td>
+				<td>
+					<p data-placement="top" data-toggle="tooltip" title="Publications">
+						<span data-bind="text: publicationsCount"></span>
+						<a class="btn btn-primary btn-xs" data-title="Open" data-bind="attr: {href: '#journals/' + idJournal + '/publications'}"><span class="glyphicon glyphicon-folder-open"></span></a>
+					</p>
+				</td>
+				<td>
+					<p data-placement="top" data-toggle="tooltip" title="Edit">
+						<button type="button" class="btn btn-primary btn-xs" data-title="Edit" data-bind="click: function(data) {$parent.openEditJournalModal(data);}">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</button>
+					</p>
+				</td>
+				<td>
+					<p data-placement="top" data-toggle="tooltip" title="Delete">
+						<button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" data-bind="click: function(data) {$parent.selectJournalToDelete(data);}">
+							<span class="glyphicon glyphicon-trash"></span>
+						</button>
+					</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- Edit Modal -->
 	<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
 		<div class="modal-dialog">
