--- a/Code/SA_Java_Journals_site/src/views/subscriptions-view/subscriptions-view.html
+++ b/Code/SA_Java_Journals_site/src/views/subscriptions-view/subscriptions-view.html
@@ -28,8 +28,8 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th>#</th>
 				<th>Journal Name</th>
+				<th>Owner</th>
 				<th>Subscription Date</th>
 				<th>Publications</th>
 				<th>Unsubscribe</th>
@@ -37,8 +37,8 @@
 		</thead>
 		<tbody data-bind="foreach: subscriptions">
 			<tr>
-				<td data-bind="text: idJournalSubscription"></td>
 				<td data-bind="text: journal.name"></td>
+				<td data-bind="text: journal.ownerProfile.firstName + ' ' + journal.ownerProfile.lastName"></td>
 				<td data-bind="text: subscriptionDate"></td>
 				<td>
 					<p data-placement="top" data-toggle="tooltip" title="Publications">
@@ -48,8 +48,8 @@
 				</td>
 				<td>
 					<p data-placement="top" data-toggle="tooltip" title="Unsubscribe">
-						<button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#unsubscribe" data-bind="click: function(data) {$parent.selectSubscriptionToDelete(data);}">
-							<span class="glyphicon glyphicon-trash"></span>
+						<button class="btn btn-danger btn-xs" data-title="Unsubscribe" data-toggle="modal" data-target="#unsubscribeJournal" data-bind="click: function(data) {$parent.selectSubscriptionToDelete(data);}">
+							<span class="glyphicon glyphicon-heart-empty"></span>
 						</button>
 					</p>
 				</td>
@@ -68,29 +68,100 @@
 				<div class="modal-body">
 					<form class="form-horizontal" data-bind="submit: doSearchJournals">
 						<fieldset>
-							<legend>Search</legend>
-							<div class="row">
-								<div class="form-group col-sm-4">
-									<label class="sr-only" for="name">Journal Name:</label>
-									<input type="text" class="form-control" id="name" placeholder="Journal Name" data-bind="textInput: journalSearchCriterias.name"/>
-								</div>
-								<div class="form-group  col-sm-4">
-									<label class="sr-only" for="tag">Tag:</label>
-									<input type="text" class="form-control" id="tag" placeholder="Tag" data-bind="textInput: journalSearchCriterias.tags"/>
-								</div>
+							<div class="form-group col-sm-4">
+								<label class="sr-only" for="name">Journal Name:</label>
+								<input type="text" class="form-control" id="name" placeholder="Journal Name" data-bind="textInput: journalSearchCriterias.name"/>
 							</div>
-							<div class="row">
-								<button type="submit" class="btn btn-primary pull-right">Search</button>
+							<div class="form-group  col-sm-4">
+								<label class="sr-only" for="tag">Tag:</label>
+								<input type="text" class="form-control" id="tag" placeholder="Tag" data-bind="textInput: journalSearchCriterias.tags"/>
 							</div>
 						</fieldset>
+						<button type="submit" class="btn btn-primary pull-right">Search</button>
 					</form>
-					<!-- ko component: { name: 'journals-list', params: {journals: journals, authModel: authModel }} -->
-					<!-- /ko -->
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>#</th>
+								<th>Journal Name</th>
+								<th>Tag</th>
+								<th>About</th>
+								<th>Owner</th>
+								<th>Subscribe</th>
+							</tr>
+						</thead>
+						<tbody data-bind="foreach: journalsToSubscribe">
+							<tr>
+								<td data-bind="text: idJournal"></td>
+								<td data-bind="text: name"></td>
+								<td data-bind="text: tags"></td>
+								<td data-bind="text: about"></td>
+								<td data-bind="text: ownerProfile.firstName + ' ' + ownerProfile.lastName"></td>
+								<td>
+									<p data-placement="top" data-toggle="tooltip" title="Subscribe">
+										<a data-bind="click: function(data) {$parent.selectJournalToSubscribe(data);}"
+										   class="btn btn-success btn-xs" 
+										   data-title="Subscribe" 
+										   data-toggle="modal"
+										   data-target="#subscribeJournal" >
+											<span class="glyphicon glyphicon-heart"></span>
+										</a>
+									</p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 				<div class="modal-footer ">
 					<button type="button" class="btn btn-warning btn-lg" data-dismiss="modal" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span> Done</button>
 				</div>
 			</div>
 		</div>
+    </div>
+
+	<!-- subscribe confirmation modal -->
+	<div class="modal fade" id="subscribeJournal" tabindex="-1" role="dialog" aria-labelledby="subscribeJournal" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+					<h4 class="modal-title custom_align" id="HeadingSubscribe">Subscribe to this journal</h4>
+				</div>
+				<div class="modal-body">
+					<div class="alert alert-info">
+						<span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to subscribe to this Journal?
+					</div>
+				</div>
+				<div class="modal-footer ">
+					<button type="button" class="btn btn-success" data-bind="click: subscribeToJournal"><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
+				</div>
+			</div>
+			<!-- /.modal-content --> 
+		</div>
+		<!-- /.modal-dialog --> 
+    </div>
+
+	<!-- unsubscribe confirmation modal -->
+	<div class="modal fade" id="unsubscribeJournal" tabindex="-1" role="dialog" aria-labelledby="unsubscribeJournal" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+					<h4 class="modal-title custom_align" id="HeadingUnsubscribe">Unsubscribe from this journal</h4>
+				</div>
+				<div class="modal-body">
+					<div class="alert alert-danger">
+						<span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to unsubscribe from this Journal?
+					</div>
+				</div>
+				<div class="modal-footer ">
+					<button type="button" class="btn btn-success" data-bind="click: deleteSubscription"><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
+				</div>
+			</div>
+			<!-- /.modal-content --> 
+		</div>
+		<!-- /.modal-dialog --> 
     </div>
 </div>
