--- a/Code/SA_Java_Journals_site/src/views/journal-publications-view/journal-publications-view.html
+++ b/Code/SA_Java_Journals_site/src/views/journal-publications-view/journal-publications-view.html
@@ -35,6 +35,7 @@
 				<th>Publication Date</th>
 				<th>Description</th>
 				<th>Publisher</th>
+				<th>Download</th>
 				<!-- ko if: authModel.role() == 'PUBLISHER'  -->
 				<th>Edit</th>
 				<th>Delete</th>
@@ -47,15 +48,22 @@
 				<td data-bind="text: publicationDate"></td>
 				<td data-bind="text: description"></td>
 				<td data-bind="text: publisherProfile.firstName + ' ' + publisherProfile.lastName"></td>
+				<td class="text-center">
+					<!-- ko if: fileName  -->
+					<p data-placement="top" data-toggle="tooltip" data-bind="attr: {title: 'Download' + fileName}">
+						<a class="btn btn-primary btn-xs" data-bind="attr: {href: '' + $parent.downloadPublicationPath + idJournalPublication}"><span class="glyphicon glyphicon-arrow-down"></span></a>
+					</p>
+					<!-- /ko -->
+				</td>
 				<!-- ko if: $parent.authModel.role() == 'PUBLISHER'  -->
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Edit">
 						<button type="button" class="btn btn-primary btn-xs" data-title="Edit" data-bind="click: function(data) {$parent.openEditJournalPublicationModal(data);}">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</button>
 					</p>
 				</td>
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Delete">
 						<button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" data-bind="click: function(data) {$parent.selectJournalPublicationToDelete(data);}">
 							<span class="glyphicon glyphicon-trash"></span>
@@ -70,16 +78,27 @@
 	<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form class="form-horizontal" data-bind="with: currentJournalPublication, submit: saveJournalPublication">
+				<form id="formUpdate" class="form-horizontal" data-bind="with: currentJournalPublication, submit: saveJournalPublication">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 						<h4 class="modal-title custom_align" id="Heading" data-bind="text: $parent.modalTitle"></h4>
 					</div>
 					<div class="modal-body">
 						<fieldset>
+							<div class="form-group row">
+								<label class="col-md-4 control-label" for="file">Publication's file:</label>
+								<div class="col-md-8">
+									<!-- ko if: $data.fileName && $parent.journalPublicationSelected  -->
+									<label data-bind="text: $data.fileName"></label>
+									<!-- /ko -->
+									<input type="file" id="file" name="file" required="true" data-bind="fileInput: $parent.fileData, customFileInput: { buttonClass: 'btn btn-success',
+										  fileNameClass: 'disabled form-control',
+										  onClear: $parent.onClear }" accept="application/pdf">
+								</div>
+							</div>
 							<div class="form-group">
 								<label class="col-md-4 control-label" for="about">Description:</label>
-								<div class="col-md-4">                     
+								<div class="col-md-8">                     
 									<textarea class="form-control" maxlength="200" id="about" name="textarea" rows="4" cols="50" data-bind="textInput: $data.description"></textarea>
 								</div>
 							</div>
