fixes in frontend

--- a/Code/SA_Java_Journals_site/src/views/home-view/home-view.html
+++ b/Code/SA_Java_Journals_site/src/views/home-view/home-view.html
@@ -25,5 +25,5 @@
 <!-- /ko -->
 <!-- ko if: authModel.success -->
 <h2>Welcome</h2>
-<button type="button" class="btn btn-primary">Log out</button>
+<button type="button" class="btn btn-primary" data-bind="click: doLogout">Log out</button>
 <!-- /ko -->
