--- a/Code/SA_Java_Journals_site/src/views/journals-view/journals-view.html
+++ b/Code/SA_Java_Journals_site/src/views/journals-view/journals-view.html
@@ -31,9 +31,9 @@
 				<th>About</th>
 				<th>Owner</th>
 				<th>Is Active</th>
-				<th>Publications</th>
-				<th>Edit</th>
-				<th>Delete</th>
+				<th class="text-center">Publications</th>
+				<th class="text-center">Edit</th>
+				<th class="text-center">Delete</th>
 			</tr>
 		</thead>
 		<tbody data-bind="foreach: journals">
@@ -44,20 +44,20 @@
 				<td data-bind="text: about"></td>
 				<td data-bind="text: ownerProfile.firstName + ' ' + ownerProfile.lastName"></td>
 				<td data-bind="text: active"></td>
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Publications">
 						<span data-bind="text: publicationsCount"></span>
 						<a class="btn btn-primary btn-xs" data-title="Open" data-bind="attr: {href: '#journals/' + idJournal + '/publications'}"><span class="glyphicon glyphicon-folder-open"></span></a>
 					</p>
 				</td>
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Edit">
 						<button type="button" class="btn btn-primary btn-xs" data-title="Edit" data-bind="click: function(data) {$parent.openEditJournalModal(data);}">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</button>
 					</p>
 				</td>
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Delete">
 						<button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" data-bind="click: function(data) {$parent.selectJournalToDelete(data);}">
 							<span class="glyphicon glyphicon-trash"></span>
