--- a/Code/SA_Java_Journals_site/src/views/subscriptions-view/subscriptions-view.html
+++ b/Code/SA_Java_Journals_site/src/views/subscriptions-view/subscriptions-view.html
@@ -31,8 +31,8 @@
 				<th>Journal Name</th>
 				<th>Owner</th>
 				<th>Subscription Date</th>
-				<th>Publications</th>
-				<th>Unsubscribe</th>
+				<th class="text-center">Publications</th>
+				<th class="text-center">Unsubscribe</th>
 			</tr>
 		</thead>
 		<tbody data-bind="foreach: subscriptions">
@@ -40,13 +40,13 @@
 				<td data-bind="text: journal.name"></td>
 				<td data-bind="text: journal.ownerProfile.firstName + ' ' + journal.ownerProfile.lastName"></td>
 				<td data-bind="text: subscriptionDate"></td>
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Publications">
 						<span data-bind="text: journal.publicationsCount"></span>
 						<a class="btn btn-primary btn-xs" data-title="Open" data-bind="attr: {href: '#subscriptions/' + journal.idJournal + '/publications'}"><span class="glyphicon glyphicon-folder-open"></span></a>
 					</p>
 				</td>
-				<td>
+				<td class="text-center">
 					<p data-placement="top" data-toggle="tooltip" title="Unsubscribe">
 						<button class="btn btn-danger btn-xs" data-title="Unsubscribe" data-toggle="modal" data-target="#unsubscribeJournal" data-bind="click: function(data) {$parent.selectSubscriptionToDelete(data);}">
 							<span class="glyphicon glyphicon-heart-empty"></span>
@@ -87,7 +87,7 @@
 								<th>Tag</th>
 								<th>About</th>
 								<th>Owner</th>
-								<th>Subscribe</th>
+								<th class="text-center">Subscribe</th>
 							</tr>
 						</thead>
 						<tbody data-bind="foreach: journalsToSubscribe">
@@ -97,7 +97,7 @@
 								<td data-bind="text: tags"></td>
 								<td data-bind="text: about"></td>
 								<td data-bind="text: ownerProfile.firstName + ' ' + ownerProfile.lastName"></td>
-								<td>
+								<td class="text-center">
 									<p data-placement="top" data-toggle="tooltip" title="Subscribe">
 										<a data-bind="click: function(data) {$parent.selectJournalToSubscribe(data);}"
 										   class="btn btn-success btn-xs" 
